# ROS-Assignment

./: README.md
butlerbot_interfaces/: CMakeLists.txt  package.xml
butlerbot_interfaces/action/: FoodDelivery.action
butlerbot_localization/config/: localization.yaml
butlerbot_localization/launch/: localization.launch.py  slam_online_async.launch.py  slam_online_sync.launch.py
butlerbot_rmf/: CMakeLists.txt  package.xml
butlerbot_rmf/launch/: cafe.launch.py  common.launch.py
butlerbot_rmf_fleet_adapter/: CMakeLists.txt  package.xml
butlerbot_task/: CMakeLists.txt  package.xml
butlerbot_task/data/: goals.db
butlerbot_task/scripts/: confirmation.py  create_db.py  getdata.py  give_goal.py  locations.txt  manual.py  task.py
docs/: mapping.md  navigation.md  openrmf.md
